finish optimize + fix index buffer bug(int16 overflow)

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -34,7 +34,7 @@
     justify-self: center;
     background-color: #FFFFFF;
     display: grid;
-    grid-template-rows: 70% 30%;
+    grid-template-rows: 40% 60%;
 }
 .manager-form {
     z-index: 3;
@@ -62,6 +62,27 @@
 
 .form-submit {
     display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+#graph-info {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 20% 60% 20%;
+}
+
+.date-input-container {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: 30% 30%;
+    justify-content: space-between;
+}
+
+#graph-submit {
+    justify-self: center;
+    align-self: flex-end;
 }
 
 .form-submit button {
